--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,17 @@
 language: python
+
 python:
  - "3.4"
+
+before_install:
+  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+  - chmod +x miniconda.sh
+  - ./miniconda.sh -b
+  - export PATH=/home/travis/miniconda/bin:$PATH
+
 install:
- - pip install -U pip wheel
- - pip install .
+ - conda install numpy scipy pandas
+ - python setup.py install
+
 script:
  - python -m unittest discover -v -s tests
