--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,11 @@ before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
   - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda/bin:$PATH
+  - export PATH=/home/travis/miniconda3/bin:$PATH
 
 install:
  - conda install numpy scipy pandas
- - python setup.py install
+ - pip install .
 
 script:
  - python -m unittest discover -v -s tests
