--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ language: python
 python:
  - "3.4"
 
+# Scipy/Numpy need to be installed separately,
+# see https://github.com/travis-ci/travis-ci/issues/2650 and
+# https://gist.github.com/dan-blanchard/7045057
 before_install:
   - wget http://repo.continuum.io/miniconda/Miniconda3-latest-Linux-x86_64.sh -O miniconda.sh
   - chmod +x miniconda.sh
