--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ install:
  - pip install .
 
 before_script:
- - psql -c 'create database travis_test;' -U postgresql
+ - psql -c 'create database travis_test;' -U postgres
  - cp agd_tools/config.ini.travis agd_tools/config.ini
 
 script:
